--- a/heroku.yml
+++ b/heroku.yml
@@ -1,3 +1,8 @@
 build:
   docker:
-    bot: Dockerfile
+    worker: Dockerfile
+run:
+  worker:
+    command:
+      - /app/dca_bot
+    worker: web
